# databricks_app_template

./: .cursorrules  .gitignore  CLAUDE.md  DATABRICKS_APPS_TOKEN_FIX.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_QUICK_FIX.md  IMPLEMENTATION_SUMMARY.md  LAKEBASE_FIX_SUMMARY.md  PYTEST_OPTIMIZATION_SUMMARY.md  QUICK_START_LAKEBASE.md  README.md  alembic.ini  app.yaml  databricks.yml  dba_client.py  dba_logz.py  deploy.sh  fix.sh  pyproject.toml  refresh_local_token.sh  requirements.txt  view_logs.sh  watch.sh
.claude/: statusline-databricks-mcp.sh
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/memory/deviations/: 003-obo-only-support.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
claude_scripts/: check_endpoint_details.py  test_chat_format.py  test_claude_sonnet_4.py  test_model_endpoint.py  test_sql_query.py
client/: package.json  tsconfig.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/: EndpointBreakdownTable.tsx  MetricsDashboard.tsx  MetricsTable.tsx  PerformanceChart.tsx  SchemaDetectionStatus.tsx  UsageChart.tsx
client/src/fastapi_client/: index.ts
client/src/hooks/: useMetricsCache.ts  useSchemaCache.ts
client/src/pages/: DatabricksServicesPage.tsx  MetricsPage.tsx  WelcomePage.tsx
docs/: DEPLOYMENT_CHECKLIST.md  LAKEBASE_LOCAL_SETUP.md  LOCAL_DEVELOPMENT.md  OBO_AUTHENTICATION.md  OBO_FIX_DEPLOYMENT.md  OBO_MIGRATION_SUMMARY.md
docs/databricks_apis/: authentication_patterns.md
docs/examples/: README.md  authorization_examples.py
migrations/: env.py
migrations/versions/: 001_create_user_preferences.py  002_create_model_inference_logs.py  003_add_user_id_columns.py  004_create_schema_detection_events.py  005_add_metrics_tables.py  006_rename_metadata_to_event_metadata.py
resources/: databricks_app_template_dev.app.yml
scripts/: aggregate_metrics.py  check_token_expiry.sh  configure_lakebase.py  format_logs.py  generate_lakebase_token.py  get_lakebase_host.py  get_user_token.py  monitor_token.sh  setup_sample_data.py  validate_deployment.sh
server/: __init__.py  app.py
server/lib/: __init__.py  auth.py  database.py  distributed_tracing.py  metrics.py  metrics_middleware.py  structured_logger.py
server/models/: __init__.py  aggregated_metric.py  data_source.py  model_endpoint.py  model_inference.py  performance_metric.py  query_result.py  schema_detection_event.py  schema_detection_result.py  usage_event.py  user_preference.py  user_session.py
server/routers/: __init__.py  lakebase.py  metrics.py  model_serving.py  unity_catalog.py  user.py
server/services/: admin_service.py  lakebase_service.py  metrics_service.py  model_serving_service.py  schema_detection_service.py  unity_catalog_service.py  user_service.py
specs/001-databricks-integrations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  ui-component-mapping.md
specs/002-fix-api-authentication/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-obo-only-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-dynamic-endpoint-input-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-write-integration-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-app-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/contract/: conftest.py  test_auth_middleware.py  test_correlation_id.py  test_debug.py  test_debug2.py  test_error_responses.py  test_health_metrics.py  test_lakebase_contract.py  test_lakebase_service_contract.py  test_metrics_api.py  test_model_serving_contract.py  test_model_serving_service_contract.py  test_preferences_contract.py  test_retry_logic.py  test_simple.py  test_unity_catalog_contract.py  test_unity_catalog_service_contract.py  test_user_contract.py  test_user_identity_extraction.py  test_user_service_contract.py
tests/integration/: conftest.py  test_accessibility_compliance.py  test_authentication.py  test_cross_service_workflows.py  test_error_handling.py  test_lakebase_full_flow.py  test_local_development.py  test_metrics_aggregation.py  test_metrics_collection.py  test_metrics_time_series.py  test_metrics_visualization.py  test_model_input_validation.py  test_model_serving_full_flow.py  test_multi_user_data_isolation.py  test_multi_user_isolation.py  test_obo_only.py  test_observability.py  test_pagination_performance.py  test_service_degradation.py  test_unity_catalog_full_flow.py  test_usage_metrics.py
tests/unit/: test_admin_service.py  test_aggregate_metrics.py  test_client_generation.py
(+63 files in other folders)
